# Grader-Service

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yml  Dockerfile  Dockerfile_lab  Dockerfile_lab_user  Dockerfile_labextension  Dockerfile_service  FullLocalInstallation.rst  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  compose.yaml  docker-compose.yml  environment.yml  grader_service.sh  grader_service.yaml  grader_service_arm.yaml  grader_service_config.py  index.yaml  jupyterhub_config.py  jupyterhub_config.yaml  jupyterhub_config_arm.yaml  jupyterhub_labextension_config.py  openapi.yml  package-lock.json  pyproject.toml  requirements-docs.txt  requirements-test.txt
.github/: release.yml
grader_convert/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
grader_convert/grader_convert/: __init__.py  _version.py  main.py  utils.py  validator.py
grader_convert/grader_convert/converters/: __init__.py  autograde.py  base.py  baseapp.py  generate_assignment.py  generate_feedback.py  generate_solution.py  updateapp.py  validateapp.py
grader_convert/grader_convert/gradebook/: gradebook.py  models.py
grader_convert/grader_convert/nbgraderformat/: common.py  v1.py  v2.py  v3.py
grader_convert/grader_convert/preprocessors/: __init__.py  addrevert.py  base.py  checkcellmetadata.py  clearalwayshiddentests.py  clearhiddentests.py  clearhiddenutils.py  clearmarkingscheme.py  clearoutput.py  clearsolutions.py  computechecksums.py  deduplicateids.py  execute.py  getgrades.py  headerfooter.py  limitoutput.py  lockcells.py  overwritecells.py  overwritekernelspec.py  saveautogrades.py  savecells.py
grader_convert/grader_convert/tests/: test_validator.py
grader_convert/grader_convert/tests/converters/: test_autograde.py  test_generate_assignment.py  test_generate_feedback.py  test_generate_solution.py
grader_convert/grader_convert/tests/nbgraderformat/: test_v1.py  test_v2.py
grader_convert/grader_convert/tests/preprocessors/: test_deduplicateids.py  test_execute.py  test_getgrades.py  test_overwritecells.py  test_savecells.py
grader_convert/grader_convert/tests/preprocessors/files/: simple.ipynb
grader_convert/grader_convert/tests/utils/: conftest.py
grader_labextension/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
grader_labextension/.github/workflows/: build.yml  check-release.yml
grader_labextension/grader_labextension/: __init__.py  api_handler.py  handlers.py  registry.py  test.py
grader_labextension/grader_labextension/api/: util.py
grader_labextension/grader_labextension/api/models/: assignment.py  assignment_detail.py  assignment_settings.py  base_model_.py  error_message.py  lecture.py  submission.py  submission_period.py  user.py  user_submissions_inner.py
grader_labextension/grader_labextension/handlers/: __init__.py  assignment.py  base_handler.py  config.py  grading.py  lectures.py  permission.py  submissions.py  version_control.py
grader_labextension/grader_labextension/services/: __init__.py  git.py  request.py
grader_labextension/grader_service/api/models/: base_model_.py  error_message.py  submission.py  user_submissions_inner.py
grader_labextension/jupyter-config/nb-config/: grader_labextension.json
grader_labextension/jupyter-config/server-config/: grader_labextension.json
grader_labextension/schema/: plugin.json
grader_labextension/src/: handler.ts  index.ts
grader_labextension/src/components/assignment/: assignment-card.tsx  assignment-files.tsx  assignment-modal.tsx  assignment-status.tsx  assignment.tsx  assignmentmanage.component.tsx  feedback.tsx  lecture-list.tsx  lecture.tsx  reducers.ts  routes.tsx  submission-list.tsx
grader_labextension/src/components/assignment/feedback/: feedback-view.tsx
grader_labextension/src/components/assignment/files/: file-view.tsx  files.tsx
grader_labextension/src/components/coursemanage/: assignment-modal.tsx  assignment.tsx  coursemanage.component.tsx  lecture.tsx  manual-grading.tsx  routes.tsx
grader_labextension/src/components/coursemanage/files/: file-view.tsx  files.tsx  git-log.tsx
grader_labextension/src/components/coursemanage/grading/: create-submission.tsx  edit-submission  edit-submission.tsx  grading.tsx  manual-grading.tsx  table-toolbar.tsx
grader_labextension/src/components/coursemanage/grading-view/: grading.tsx  manual-grading.tsx
grader_labextension/src/components/coursemanage/overview/: assignment-status.tsx  files.tsx  overview-card.tsx  overview.tsx
grader_labextension/src/components/coursemanage/overview-view/: assignment-status.tsx  charts.tsx  files.tsx  git-log.tsx  overview-card.tsx  overview.tsx  util.ts
grader_labextension/src/components/notebook/: model.ts  slider.tsx  switch-factory.tsx
grader_labextension/src/components/util/: breadcrumbs.tsx  card-descriptor.tsx  deadline.tsx  dialog-provider.tsx  dialog.tsx  error.tsx  file-item.tsx  file-list.tsx  folder-item.tsx  modal-title.tsx  overlay.tsx  repo-type.tsx  section-title.tsx  split-button.tsx  table.tsx
grader_labextension/src/model/: assignment.ts  assignmentDetail.ts  assignmentSettings.ts  errorMessage.ts  lecture.ts  submission.ts  submissionPeriod.ts  userSubmissionsInner.ts
grader_labextension/src/services/: assignments.service.ts  config.service.ts  datetime.service.ts  file.service.ts  gradebook.ts  grading.service.ts  lectures.service.ts  ltisync.service.ts  permission.service.ts  request.service.ts  storage.service.ts  submissions.service.ts
grader_labextension/src/widgets/: assignment-list.tsx  assignmentmanage.tsx  coursemanage.tsx
grader_labextension/style/: base.css  index.css
grader_labextension/style/components/: assignment-list.css  assignment.css  cellwidget.css  courses.css  createassignment.css  file-view.css  grading.css  lecturecard.css  stats.css
grader_labextension/ui-tests/: package-lock.json  package.json
grader_labextension/ui-tests/tests/: grader_labextension.spec.ts
(+1126 files in other folders)
