[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["grader_labextension/labextension/static/style.js"]
ensured-targets = ["grader_labextension/labextension/static/style.js", "grader_labextension/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["grader_labextension/labextension/**", "yarn.lock", ".*", "package-lock.json"]

# tbump config

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/TU-Wien-dataLAB/Grader-Service"

[tool.tbump.version]
current = "0.1.25"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
   (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  \-?
  (?P<pre>((a|b|rc|dev)\d+)?)
  '''

[tool.tbump.git]
message_template = "Bump labextension to {new_version}"
tag_template = "grader-labextension-{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# pyproject.toml location.

[[tool.tbump.file]]
src = "package.json"
search = "\"version\": \"{current_version}\""

[[tool.tbump.file]]
src = "../docs/source/_static/openapi/extension_api.yml"
search = "version: '{current_version}'"

